Convert the usage of TestNG to JUnit 5